deployments/demo/mongodb-demo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-demo
spec:
  serviceName: "mongodb-demo"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-demo
  template:
    metadata:
      labels:
        app: mongodb-demo
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
