deployments/demo/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: api.zzv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-demo
            port:
              number: 8080
  - host: www.zzv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui-demo
            port:
              number: 80
